--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     background-color: #238c00;
     width: 100%;
     height: 100px;
+    color: #ffffff;
 }
 
 .road {
@@ -30,7 +31,7 @@ body {
     width: 100px;
     height: 50px;
     background-color: #fff;
-    margin-top: 0;
+    margin-top: 50;
 }
 
 .wall {
