--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@ body {
 
 .scene {
     float: left;
-    background-color: #000;
+    background-color: #DF3D82;
     width: 100%;
     height: 500px;
 }
 
 .grass {
     float: left;
-    background-color: #238c00;
+    background-color: #005A31;
     width: 100%;
     height: 100px;
     color: #ffffff;
@@ -21,7 +21,7 @@ body {
 
 .road {
     float: left;
-    background-color: #cccccc;
+    background-color: #4A96AD;
     width: 100%;
     height: 300px;
 }
@@ -38,7 +38,7 @@ body {
     position: absolute;
     width: 50px;
     height: 100px;
-    background-color: #b23d00;
+    background-color: #DE1B1B;
     right: 0px;
 }
 
@@ -71,7 +71,7 @@ body {
 
 .debugArea {
     width: 100%;
-    background-color: #000;
+    background-color: #C1E1A6;
     float: left;
     height: 100%;
 }
